MEGA HOTFIX global commands again...